fixed overflow

--- a/pages/css/SiteStyles.css
+++ b/pages/css/SiteStyles.css
@@ -50,6 +50,7 @@ table {
 {
     margin: 0;
     padding: 0;
+    overflow: auto;
 }
 
 .pageHeader
